# graph_hri

./: .cproject  .project  CMakeLists.txt  ListaLinkata.h  Nodo.h  aograph.cpp  aograph.h  aonode.cpp  aonode.h  input_file.txt  item.h  main.cpp
